crates/pcb-zen-core/tests/snapshots/test__duplicate_module_name.snap
---
source: crates/pcb-zen-core/tests/test.rs
assertion_line: 164
expression: output
---
Error: test.zen:11:1-19 Duplicate child name 'sub1': a module with this name already exists.
