crates/pcb-zen-core/tests/snapshots/test__missing_pins_should_error.snap
---
source: crates/pcb-zen-core/tests/test.rs
expression: output
---
Error: test_missing.zen:6:1-14:2 Unconnected pin(s): GND, OE, Q2, Q3, Q4, VDD
