crates/pcb-zen-core/tests/snapshots/test__nested_components.snap
---
source: crates/pcb-zen-core/tests/test.rs
assertion_line: 88
expression: output
---
{
    <root>: Module {
        path: <root>,
        source: "Top.zen",
    },
    MyModule: Module {
        path: MyModule,
        source: "/Module.zen",
    },
    MyModule.MyComponent: Module {
        path: MyModule.MyComponent,
        source: "/Component.zen",
        children: [
            FrozenValue(
                Component {
                    name: "Component",
                    footprint: "package://stdlib/kicad-footprints/Capacitor_SMD.pretty/C_0805_2012Metric.kicad_mod",
                    prefix: "U",
                    connections: {
                        "P1": FrozenValue(
                            Net {
                                name: "P1",
                                id: "<ID>",
                            },
                        ),
                        "P2": FrozenValue(
                            Net {
                                name: "P2",
                                id: "<ID>",
                            },
                        ),
                    },
                    symbol: FrozenValue(
                        Symbol {
                            name: None,
                            pins: {
                                "1": "P1",
                                "2": "P2",
                            },
                        },
                    ),
                },
            ),
        ],
    },
}
[]
