crates/pcb-zen-core/tests/snapshots/test__net_name_deduplication.snap
---
source: crates/pcb-zen-core/tests/test.rs
assertion_line: 119
expression: output
---
{
    <root>: Module {
        path: <root>,
        source: "Top.zen",
    },
    MyModule1: Module {
        path: MyModule1,
        source: "/MyModule.zen",
        children: [
            FrozenValue(
                Component {
                    name: "Component",
                    footprint: "package://stdlib/kicad-footprints/Capacitor_SMD.pretty/C_0805_2012Metric.kicad_mod",
                    prefix: "U",
                    connections: {
                        "P1": FrozenValue(
                            Net {
                                name: "INTERNAL",
                                id: "<ID>",
                            },
                        ),
                    },
                    symbol: FrozenValue(
                        Symbol {
                            name: None,
                            pins: {
                                "1": "P1",
                            },
                        },
                    ),
                },
            ),
        ],
    },
    MyModule2: Module {
        path: MyModule2,
        source: "/MyModule.zen",
        children: [
            FrozenValue(
                Component {
                    name: "Component",
                    footprint: "package://stdlib/kicad-footprints/Capacitor_SMD.pretty/C_0805_2012Metric.kicad_mod",
                    prefix: "U",
                    connections: {
                        "P1": FrozenValue(
                            Net {
                                name: "INTERNAL",
                                id: "<ID>",
                            },
                        ),
                    },
                    symbol: FrozenValue(
                        Symbol {
                            name: None,
                            pins: {
                                "1": "P1",
                            },
                        },
                    ),
                },
            ),
        ],
    },
    MyModule3: Module {
        path: MyModule3,
        source: "/MyModule.zen",
        children: [
            FrozenValue(
                Component {
                    name: "Component",
                    footprint: "package://stdlib/kicad-footprints/Capacitor_SMD.pretty/C_0805_2012Metric.kicad_mod",
                    prefix: "U",
                    connections: {
                        "P1": FrozenValue(
                            Net {
                                name: "INTERNAL",
                                id: "<ID>",
                            },
                        ),
                    },
                    symbol: FrozenValue(
                        Symbol {
                            name: None,
                            pins: {
                                "1": "P1",
                            },
                        },
                    ),
                },
            ),
        ],
    },
}
[]
