crates/pcb-zen-core/tests/snapshots/test__net_passing.snap
---
source: crates/pcb-zen-core/tests/test.rs
assertion_line: 4
expression: output
---
{
    <root>: Module {
        path: <root>,
        source: "top.zen",
    },
    Test: Module {
        path: Test,
        source: "/test.zen",
    },
    Test.MyComponent: Module {
        path: Test.MyComponent,
        source: "/MyComponent.zen",
        children: [
            FrozenValue(
                Component {
                    name: "capacitor",
                    type: "capacitor",
                    footprint: "package://stdlib/kicad-footprints/Capacitor_SMD.pretty/C_0805_2012Metric.kicad_mod",
                    prefix: "U",
                    connections: {
                        "P1": FrozenValue(
                            Net {
                                name: "INTERFACE_p1",
                                id: "<ID>",
                            },
                        ),
                        "P2": FrozenValue(
                            Net {
                                name: "INTERFACE_p2",
                                id: "<ID>",
                            },
                        ),
                    },
                    symbol: FrozenValue(
                        Symbol {
                            name: None,
                            pins: {
                                "1": "P1",
                                "2": "P2",
                            },
                        },
                    ),
                },
            ),
        ],
    },
}
[]
