crates/pcb-zen-core/tests/snapshots/test__unknown_pin_should_error.snap
---
source: crates/pcb-zen-core/tests/test.rs
expression: output
---
Error: test_unknown.zen:6:1-21:2 Unknown pin name 'INVALID' (expected one of: ICLK, Q1, Q2, Q3, OE, VDD, GND, Q4)
