crates/pcb-zen-core/tests/snapshots/test__unused_inputs_should_error.snap
---
source: crates/pcb-zen-core/tests/test.rs
expression: output
---
Error: top.zen:7:1-10:2 Unknown argument(s) provided to module my_module: unused
